# PySolitaire

./: .coveragerc  .gitignore  .python-version  Claude.md  LICENSE.md  MOUSE_CONTROLS_PLAN.md  Makefile  README.md  layout_preview.py  mutmut_config.py  pyproject.toml  requirements.txt
src/: __main__.py  config.py  cursor.py  dealing.py  dialogs.py  game_controller.py  input_handler.py  leaderboard.py  model.py  mouse.py  moves.py  overlays.py  renderer.py  rules.py  save_state.py  selection.py  timer.py  ui_blessed.py  undo.py
src/pysolitaire/: __init__.py  __main__.py  cursor.py  dealing.py  dialogs.py  game_controller.py  input_handler.py  leaderboard.py  mouse.py  moves.py  overlays.py  renderer.py  rules.py  save_state.py  selection.py  ui_blessed.py  undo.py
tests/: __init__.py  test_config.py  test_cursor.py  test_dealing.py  test_dialogs.py  test_game_controller.py  test_input_handler.py  test_leaderboard.py  test_model.py  test_mouse.py  test_moves.py  test_overlays.py  test_renderer.py  test_rules.py  test_save_state.py  test_selection.py  test_timer.py  test_ui_integration.py  test_undo.py
