[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pysolitaire"
version = "1.0.0"
description = "Terminal-based Klondike Solitaire game"
readme = "Claude.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["solitaire", "klondike", "terminal", "game", "cards"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Board Games",
]
dependencies = [
    "blessed>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
pysolitaire = "src.ui_blessed:main"
solitaire = "src.ui_blessed:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
